core/tests/integration/typecheck/fail/mismatch_record_field_name.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::MissingRow'
#
# [test.metadata.expectation]
# ident = 'bla'
{ blo = 1 } : { bla : Number }